# template-metaprogramming-journey

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md
cmake/: CompilerWarnings.cmake
include/constexpr/: compile_time_loop.hpp  passbyvalue.hpp
include/project/: header.hpp
include/sfinae/: generic_lambda_sfinae_1.hpp  sfinae_modulo.hpp
include/simple/: template_is_prime.hpp  template_recur_sum.hpp
include/type/: type_name.hpp
source/basic/: 00_basic_function_templates.cpp  01_basic_class_templates.cpp  CMakeLists.txt
source/project/: CMakeLists.txt  project.cpp
src/: CMakeLists.txt  constexpr_is_prime.hpp  generic_lambda_sfinae_2.hpp  main.cpp  sfinae_modulo.hpp  something.hpp  template_is_prime.hpp  template_recur_sum.hpp  type_name.hpp  typefunc.hpp
